# multi-agent-RAG-assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.ko.md  CLAUDE.md  CLAUDE.old.md  DECLARATION.ko.md  DECLARATION.md  README.md  docker-compose.yml  main.py  pyproject.toml
.dev-journal/journals/: day-1.md
.dev-journal/traces/: day-1.json
app/: config.py  main.py
app/db/: base.py  models.py  session.py
app/dev_journal/: __init__.py  cli.py
app/rag/: answer.py  chunk.py  embed.py  generate.py  ingest.py  prompt.py  retrieve.py
data/sample/: fastapi.md  langgraph.md  rag.md
docs/: PRD.ko.md  PRD.md  decision-log.md  doubts.md  handoff.ko.md  handoff.md  journal.md
examples/: langgraph_quickstart.py  rag_answer_demo.py
scripts/: dev-start.sh  init.sql
tests/: test_chunk.py  test_dev_journal.py  test_embed.py  test_generate.py  test_prompt.py  test_retrieve.py
